--- a/LAV.EventBus/LAV.EventBus.csproj
+++ b/LAV.EventBus/LAV.EventBus.csproj
@@ -2,34 +2,30 @@
 
   <PropertyGroup>
     <!-- Target both .NET Standard 2.0 and .NET Framework 4.5.2 -->
-    <TargetFrameworks>net452;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net452</TargetFrameworks>
     <OutputType>Library</OutputType>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <!-- Target both .NET Standard 2.0  -->
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
-  <!-- Add any dependencies specific to .NET Framework 4.5.2 -->
   <ItemGroup Condition="'$(TargetFramework)' == 'net452'">
-    <!-- Example: Add a NuGet package only for .NET Framework 4.5.2 
-    <PackageReference Include="SomePackage" Version="1.0.0" />
-    -->
+    <!--<PackageReference Include="ICSharpCode.Decompiler" Version="2.3.1" />-->
   </ItemGroup>
 
-  <!-- Add any dependencies specific to .NET Standard 2.0 -->
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <!-- Example: Add a NuGet package only for .NET Standard 2.0 
-    <PackageReference Include="AnotherPackage" Version="1.0.0" />
-    -->
+    <!--<PackageReference Include="ICSharpCode.Decompiler" Version="9.0.0.7889" />-->
+    <PackageReference Include="System.Threading.Channels" Version="9.0.2" />
   </ItemGroup>
 
+  
   <!-- Shared dependencies for both frameworks 
   <ItemGroup>
-    <PackageReference Include="SharedPackage" Version="1.0.0" />
+    <PackageReference Include="ICSharpCode.Decompiler" Version="9.0.0.7889" />
+    <PackageReference Include="System.Threading.Channels" Version="9.0.2" />
   </ItemGroup>
   -->
 </Project>
