--- a/ExampleConsoleApp/ExampleConsoleApp.csproj
+++ b/ExampleConsoleApp/ExampleConsoleApp.csproj
@@ -2,10 +2,13 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <TargetFrameworks>net9.0;net452</TargetFrameworks>
   </PropertyGroup>
+
+	<PropertyGroup Condition="'$(TargetFramework)' == 'net9.0'">
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\LAV.EventBus\LAV.EventBus.csproj" />
