--- a/LAV.EventBus/LAV.EventBus.csproj
+++ b/LAV.EventBus/LAV.EventBus.csproj
@@ -5,6 +5,7 @@
     <TargetFrameworks>netstandard2.0;net452</TargetFrameworks>
     <OutputType>Library</OutputType>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+	<LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
@@ -18,9 +19,16 @@
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <!--<PackageReference Include="ICSharpCode.Decompiler" Version="9.0.0.7889" />-->
+    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="9.0.2" />
     <PackageReference Include="System.Threading.Channels" Version="9.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="EventBus.cs" />
+    <Compile Remove="HandlerInfo.cs" />
+    <Compile Remove="IHandlerType.cs" />
+    <Compile Remove="WeakHandler.cs" />
+  </ItemGroup>
   
   <!-- Shared dependencies for both frameworks 
   <ItemGroup>
