--- a/LAV.EventBus/LAV.EventBus.csproj
+++ b/LAV.EventBus/LAV.EventBus.csproj
@@ -6,6 +6,13 @@
     <OutputType>Library</OutputType>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 	<LangVersion>latest</LangVersion>
+
+	  <PackageId>LAV.EventBus</PackageId>
+	  <Version>1.0.0</Version>
+	  <Authors>Helll3oy</Authors>
+	  <Company>komi</Company>
+	  <PackageDescription>Represents a fast event bus for managing event subscriptions and publications.</PackageDescription>
+	  <RepositoryUrl>https://github.com/Helll3oy/LAV.EventBus.git</RepositoryUrl>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
@@ -28,6 +35,10 @@
     <Compile Remove="HandlerInfo.cs" />
     <Compile Remove="IHandlerType.cs" />
     <Compile Remove="WeakHandler.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include=".github\workflows\publish-package.yml" />
   </ItemGroup>
   
   <!-- Shared dependencies for both frameworks 
