--- a/LAV.EventBus/LAV.EventBus.csproj
+++ b/LAV.EventBus/LAV.EventBus.csproj
@@ -1,47 +1,48 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <!-- Target both .NET Standard 2.0 and .NET Framework 4.5.2 -->
-    <TargetFrameworks>netstandard2.0;net452</TargetFrameworks>
-    <OutputType>Library</OutputType>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-	<LangVersion>latest</LangVersion>
+	<PropertyGroup>
+		<!-- Target both .NET Standard 2.0 and .NET Framework 4.5.2 -->
+		<TargetFrameworks>net452;netstandard2.0</TargetFrameworks>
+		<OutputType>Library</OutputType>
+		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+		<LangVersion>latest</LangVersion>
 
-	  <PackageId>LAV.EventBus</PackageId>
-	  <Version>1.0.0</Version>
-	  <Authors>Helll3oy</Authors>
-	  <Company>komi</Company>
-	  <PackageDescription>Represents a fast event bus for managing event subscriptions and publications.</PackageDescription>
-	  <RepositoryUrl>https://github.com/Helll3oy/LAV.EventBus.git</RepositoryUrl>
-  </PropertyGroup>
+		<PackageId>LAV.EventBus</PackageId>
+		<Version>1.0.0</Version>
+		<Authors>Helll3oy</Authors>
+		<Company>komi</Company>
+		<PackageDescription>Represents a fast event bus for managing event subscriptions and publications.</PackageDescription>
+		<RepositoryUrl>https://github.com/Helll3oy/LAV.EventBus.git</RepositoryUrl>
+	</PropertyGroup>
 
-  <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <ImplicitUsings>disable</ImplicitUsings>
-    <Nullable>disable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+		<ImplicitUsings>disable</ImplicitUsings>
+		<Nullable>disable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net452'">
-    <!--<PackageReference Include="ICSharpCode.Decompiler" Version="2.3.1" />-->
-  </ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net452'">
+		<!--<PackageReference Include="ICSharpCode.Decompiler" Version="2.3.1" />-->
+		<Compile Remove="EventItem.netstandard2.cs" />
+	</ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <!--<PackageReference Include="ICSharpCode.Decompiler" Version="9.0.0.7889" />-->
-    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="9.0.2" />
-    <PackageReference Include="System.Threading.Channels" Version="9.0.2" />
-  </ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+		<!--<PackageReference Include="ICSharpCode.Decompiler" Version="9.0.0.7889" />-->
+		<PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="9.0.2" />
+		<PackageReference Include="System.Threading.Channels" Version="9.0.2" />
 
-  <ItemGroup>
-    <Compile Remove="EventBus.cs" />
-    <Compile Remove="HandlerInfo.cs" />
-    <Compile Remove="IHandlerType.cs" />
-    <Compile Remove="WeakHandler.cs" />
-  </ItemGroup>
+		<Compile Remove="EventItem.net452.cs" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <None Include=".github\workflows\publish-package.yml" />
-  </ItemGroup>
-  
-  <!-- Shared dependencies for both frameworks 
+	<ItemGroup>
+		<Compile Remove="AsyncEnumerator.cs" />
+		<Compile Remove="DelegateInfo - Копировать.cs" />
+		<Compile Remove="EventBus.cs" />
+		<Compile Remove="HandlerInfo.cs" />
+		<Compile Remove="IHandlerType.cs" />
+		<Compile Remove="WeakHandler.cs" />
+	</ItemGroup>
+
+	<!-- Shared dependencies for both frameworks 
   <ItemGroup>
     <PackageReference Include="ICSharpCode.Decompiler" Version="9.0.0.7889" />
     <PackageReference Include="System.Threading.Channels" Version="9.0.2" />
