--- a/LAV.EventBus/LAV.EventBus.csproj
+++ b/LAV.EventBus/LAV.EventBus.csproj
@@ -2,12 +2,12 @@
 
 	<PropertyGroup>
 		<!-- Target both .NET Standard 2.0 and .NET Framework 4.5.2 -->
-		<TargetFrameworks>net452;netstandard2.0</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;net452</TargetFrameworks>
 		<OutputType>Library</OutputType>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<LangVersion>latest</LangVersion>
 
-		<PackageId>LAV.EventBus</PackageId>
+		<PackageId>$(AssemblyName)</PackageId>
 		<Version>1.0.0</Version>
 		<Authors>Helll3oy</Authors>
 		<Company>komi</Company>
@@ -22,24 +22,31 @@
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net452'">
 		<!--<PackageReference Include="ICSharpCode.Decompiler" Version="2.3.1" />-->
+		<PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
+		<PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="1.4.1" />
+		
 		<Compile Remove="EventItem.netstandard2.cs" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
 		<!--<PackageReference Include="ICSharpCode.Decompiler" Version="9.0.0.7889" />-->
 		<PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="9.0.2" />
+		<PackageReference Include="Microsoft.IO.RecyclableMemoryStream" Version="3.0.1" />
+		<!--<PackageReference Include="System.Collections.Immutable" Version="9.0.2" />-->
 		<PackageReference Include="System.Threading.Channels" Version="9.0.2" />
+		<PackageReference Include="System.Threading.Tasks.Extensions" Version="4.6.0" />
 
 		<Compile Remove="EventItem.net452.cs" />
 	</ItemGroup>
 
+	<!-- System.HashCode introduced in netcoreapp2.1, netstandard2.1 -->
+	<ItemGroup Condition="('$(TargetFramework)'=='netcoreapp2.0' or '$(TargetFramework)'=='netstandard2.0' or '$(TargetFramework)'=='net461')">
+		<!-- Microsoft.Bcl.HashCode package targets netcoreapp2.0, netstandard2.0, net461 -->
+		<PackageReference Include="Microsoft.Bcl.HashCode" Version="6.0.0" />
+	</ItemGroup>
+
 	<ItemGroup>
 		<Compile Remove="AsyncEnumerator.cs" />
-		<Compile Remove="DelegateInfo - Копировать.cs" />
-		<Compile Remove="EventBus.cs" />
-		<Compile Remove="HandlerInfo.cs" />
-		<Compile Remove="IHandlerType.cs" />
-		<Compile Remove="WeakHandler.cs" />
 	</ItemGroup>
 
 	<!-- Shared dependencies for both frameworks 
